[package]
name = "derive-knet"
version = "0.1.0"
authors = ["Krys <aroulin@stundent.42.fr>"]
edition = "2018"
keywords = ["derive", "serialize", "deserialize"]
repository = "https://github.com/alexandre-roulin/derive-knet"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["extra-traits"] }
quote = "0.6"
proc-macro2 = "0.4.30"