[package]
name = "derive-knet"
version = "0.1.0"
authors = ["Krys <roulin.alexandre@gmail.com>"]
edition = "2018"
keywords = ["derive", "serialize", "deserialize"]
repository = "https://github.com/alexandre-roulin/derive-knet"
description = "A derive macro for serialize and deserialize the data"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["extra-traits"] }
quote = "0.6"
proc-macro2 = "0.4.30"